Upload button style fix

--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -126,9 +126,9 @@
 
         <div class="text-vertical-center">
             <% if(noUploadForUser == 0) { %>
-
-              <span class="file-input btn btn-primary btn-file uploadButton">
-                  Upload presentation <input type="file" accept="pptx" id="uploadPresentation">
+              <input type="file" accept="pptx" id="uploadPresentation" style="display: none">
+              <div class="uploadfile">
+                  <input class="btn uploadButton" onclick="$('#uploadPresentation').click()" type="button" value="Upload presentation">
               </span>
 			<% } else if (noUploadForUser == 2) { %>
 
