--- a/AWS_Website/www_static/chat.html
+++ b/AWS_Website/www_static/chat.html
@@ -33,7 +33,7 @@
         </div>
         <form id="chatForm" class="form-inline">
           <div class="form-group">
-            <input type="text" class="form-control input-lg" placeholder="Your message" id="msg">
+            <input type="text" class="form-control input-lg" placeholder="Your message" id="msg" autocomplete="off">
           </div>
           <!--
 		  <input type="submit" name="send" id="send" value="Send" class="btn btn-success btn-lg">
