--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -140,18 +140,10 @@
             <% } else if (noUploadForUser == 2) {%>
 			
 				<% randomSlides.forEach(function(slide){ %>
-					<p><a href="/
-					<% if(slide.scid != null) { %>
-						<%= slide.scid %>
-					<% } else { %>
-						<%= slide.sid %>
-					<% } %>
-					">
+					<p><a href="/<% if(slide.scid != null) { %><%= slide.scid %><% } else { %><%= slide.sid %><% } %>">
 					<img src="/<%= slide.sid %>/img0.jpg" class="img-rounded" width="20" title="<%= slide.title %>">
 					<%= slide.title %></a></p>
 				<%  }); %>
-
-			
 			<% } %>
 			
             <!-- <a href="#about" class="btn btn-dark btn-lg">Find Out More</a> -->
