--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -100,7 +100,7 @@
     <div class="modal-dialog uploadDialog" id="upload_presentation">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="location.reload()"><span aria-hidden="true">&times;</span></button>
             </div>
             <div class="modal-body">
                 <h3 id="uploadLabel">Uploading presentation...</h3>
