Stop Record button fix

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -51,7 +51,7 @@
 <body> <!--onresize="resizeCanvas()">-->
 
 <div id="recStarted">
-<img id="recordButton" src="/img/matrox-record-icon.jpg" width="50" height="60" alt="Stop recording" title="Stop recording">
+<img id="recordButton" width="23px" height="23px" style="cursor:pointer;opacity:0.5;position:fixed;top:0px;left:0px;" title="Stop recording" alt="Stop recording" src="/img/stop_recording_button.png">
 </div>
 
 	<!--<img src="../img/RightCurtain.png" id="rightCurtain" class="curtain" />
