Channel restore feature added

--- a/AWS_Website/www_static/A1/webrtc/sharing-client.html
+++ b/AWS_Website/www_static/A1/webrtc/sharing-client.html
@@ -35,7 +35,15 @@ socketWebrtc.on('sharing-client', function (data) {
 						userid:    MODERATOR_ID,
 						extra:     MODERATOR_EXTRA,
 						session:   MODERATOR_SESSION
-			});
+		});
+		
+		participants.onstreamended = function(event) {
+			if(event.type == "remote" && event.userid == data.moderatorId) {
+				alert("Lost video connection with presenter. Reconnecting...");
+				location.reload();
+			}
+		};
+		
 	}
 
 });
