--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -26,7 +26,7 @@
 		var payed = "<%= payed %>";
 		var customurl = "<%= customurl %>";
 		var isVideoChatOpen = "<%= isVideoChatOpen %>";
-		var isScreensharingOpen = "<%= isScreensharingOpen %>"
+		var isScreensharingOpen = "<%= isScreensharingOpen %>";
 		</script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="../js/jquery-2.1.3.min.js"></script>
