--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -27,6 +27,7 @@
 		var customurl = "<%= customurl %>";
 		var isVideoChatOpen = "<%= isVideoChatOpen %>";
 		var isScreensharingOpen = "<%= isScreensharingOpen %>";
+		var currentHash = "<%= hash %>";
 		</script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="../js/jquery-2.1.3.min.js"></script>
