Removed alert windows for video & screensharing

--- a/AWS_Website/www_static/A1/webrtc/video-client.html
+++ b/AWS_Website/www_static/A1/webrtc/video-client.html
@@ -87,7 +87,7 @@ socketWebrtc.on('sharing-client', function (data) {
 		
 		participants.onstreamended = function(event) {
 			if(event.type == "remote" && event.userid == data.moderatorId) {
-				alert("Lost video connection with presenter. Reconnecting...");
+				console.log("Lost video connection with presenter. Reconnecting...");
 				location.reload();
 			}
 		};
