--- a/AWS_Website/www_static/A1/webrtc/sharing-presenter.html
+++ b/AWS_Website/www_static/A1/webrtc/sharing-presenter.html
@@ -26,6 +26,15 @@ else {
 
 var connection  = new RTCMultiConnection('prezera-screen');
 
+connection.bandwidth = {
+	audio: 128,
+	video: 256,
+	data: 1638400,
+	screen: 300
+};
+
+
+
 connection.session = {
 		screen: true,
 		audio: true,
